argocd/manifests/prod/infra/argocd/deployment.yaml
# Adding label for homepage
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
  namespace: argocd
spec:
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argocd
