argocd/manifests/prod/infra/argocd/patch-disable-dex.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-dex-server
$patch: delete
