argocd/manifests/prod/infra/argocd/patch-disable-dex-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-dex-server
$patch: delete
